Añadido metodo de pago

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ethereum Pet Shop</title>
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,8 +43,9 @@
             <br/><br/>
             <strong>Breed</strong>: <span class="pet-breed">Golden Retriever</span><br/>
             <strong>Age</strong>: <span class="pet-age">3</span><br/>
-            <strong>Location</strong>: <span class="pet-location">Warren, MI</span><br/><br/>
-            <button class="btn btn-default btn-adopt" type="button" data-id="0">Adopt</button>
+            <strong>Location</strong>: <span class="pet-location">Warren, MI</span><br/>
+            <strong>Price</strong>: <span class="pet-price">1</span><br/><br/>
+            <button class="btn btn-default btn-adopt" type="button" data-id="0" data-price="0">Adopt</button>
           </div>
         </div>
       </div>
