Añadido la obtencion del balance

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
           <h1 class="text-center">Ethereum Pet Shop</h1>
+          <h2 id ="balanceTemplate" class="text-center">Balance <span class="balance">0</span> Ether</h2>
           <hr/>
           <br/>
         </div>
