--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
             <strong>Location</strong>: <span class="pet-location">Warren, MI</span><br/>
             <strong>Price</strong>: <span class="pet-price">1</span><br/><br/>
             <button class="btn btn-default btn-adopt" type="button" data-id="0" data-price="0">Adopt</button>
+            <button class="btn btn-default btn-return" type="button" data-id="0" data-price="0">Return</button>
           </div>
         </div>
       </div>
